@@ -1,3 +1,8 @@
+2006-08-12  Ville Vainio  <vivainio@gmail.com>
+
+	* Fakemodule.py, OInspect.py: Reverted 2006-08-11 mods,
+	they broke unittest 
+
 2006-08-11  Ville Vainio  <vivainio@gmail.com>
 
 	* Fakemodule.py, OInspect.py: remove 2006-08-09 monkepatch
